--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,5 @@ jobs:
             - uses: actions/setup-python@v1
               with:
                 python-version: 3.8
-            - uses: Gr1N/setup-poetry@v2
-            - uses: actions/cache@v1
-              with:
-                  path: ~/.cache/pypoetry/virtualenvs
-                  key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-                  restore-keys: |
-                    ${{ runner.os }}-poetry-
+            - uses: abatilo/actions-poetry@v1.5.0
             - run: poetry run black . --check
