--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,7 @@ jobs:
             - uses: actions/setup-python@v1
               with:
                 python-version: 3.8
-            - uses: abatilo/actions-poetry@v1.5.0
+            - run: curl -sSL -O https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+            - run: python get-poetry.py
+            - run: poetry install
             - run: poetry run black . --check
