--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,6 @@ jobs:
                 python-version: 3.8
             - run: curl -sSL -O https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
             - run: python get-poetry.py
+            - run: echo "::add-path::$HOME/.poetry/bin"
             - run: poetry install
             - run: poetry run black . --check
