--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,5 +19,6 @@ jobs:
             - run: echo "::add-path::$HOME/.poetry/bin"
             - run: poetry install
             - run: poetry run black . --check
+            - run: poetry build
             - run: poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
             - run: poetry publish
