--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ pytest = "^4.6"
 black = "^19.10b0"
 
 [tool.poetry.scripts]
-schemahq = "schemahq_cli.cli:main"
+schemahq = "schemahq.cli:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
